--- a/personal-assistant/package.json
+++ b/personal-assistant/package.json
@@ -8,11 +8,12 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "dev": "react-scripts start",
-    "lint": "npx eslint \"src/**/*.js\"",
+    "lint": "npx eslint \"src/**/*.js\" --fix",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
     "@storybook/react": "^5.2.8",
+    "nanoid": "^2.1.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
